Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112389

FPS counter is not working

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.6.0
    • 6.6
    • Graphs: 3D, Quick: 3D
    • None
    • 39ff5d93a (dev), 9dc878378 (dev)

      API for fps counter doesn't work. It's missing the plumbing to QtQuick3D.

      Edit: It works fine from QML apps, but does not work at all from widget apps. The plumbing is there, but we're not getting fpsChanged signals from QtQuick3D.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tokorpip Tomi Korpipää
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes