Fix getting onFrameSwapped with QQuickWidget apps

frameSwapped is not emitted when running QtGraphs (or any other
QtQuick3D app) in QQuickWidget.

Fixes: QTBUG-112389
Change-Id: Ia059c1459e8acc1649ff4dc6ca8b997040d3a8ed
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>